--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     ]
   },
   "prettier": {
+    "printWidth": 60,
     "bracketSpacing": false,
     "singleQuote": true,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "useTabs": true
   }
 }
